snapshots/syntax/library/functions/file/getattr/getattr_msgbox.snap
---
source: vb6parse/src/syntax/library/functions/file/getattr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: Identifier
          text: MsgBox
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"File attributes: \""
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: GetAttr
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: filename
        - kind: RightParenthesis
          text: )
