snapshots/syntax/library/functions/file/getattr/getattr_select_case.snap
---
source: vb6parse/src/syntax/library/functions/file/getattr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SelectCaseStatement
      children:
        - kind: SelectKeyword
          text: Select
        - kind: Whitespace
          text: " "
        - kind: CaseKeyword
          text: Case
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: GetAttr
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: filename
                - kind: RightParenthesis
                  text: )
            - kind: Whitespace
              text: " "
            - kind: AndKeyword
              text: And
            - kind: Whitespace
              text: " "
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: vbDirectory
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "0"
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: Whitespace
                  text: "        "
                - kind: CallStatement
                  children:
                    - kind: Identifier
                      text: Debug
                    - kind: PeriodOperator
                      text: "."
                    - kind: PrintKeyword
                      text: Print
                    - kind: Whitespace
                      text: " "
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"File\""
                    - kind: Newline
                      text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SelectKeyword
          text: Select
