snapshots/syntax/library/functions/file/getattr/getattr_setattr.snap
---
source: src/syntax/library/functions/file/getattr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SetAttrStatement
      children:
        - kind: SetAttrKeyword
          text: SetAttr
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: filename
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: GetAttr
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: filename
        - kind: RightParenthesis
          text: )
        - kind: Whitespace
          text: " "
        - kind: AndKeyword
          text: And
        - kind: Whitespace
          text: " "
        - kind: NotKeyword
          text: Not
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: vbReadOnly
